# tap-entegra

./: .gitignore  .pre-commit-config.yaml  ENTEGRA_API_DOCUMENTATION.md  LICENSE  README.md  catalog.json  config.json  config.sample.json  meltano.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
tap_entegra/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
